added new functionality
